added table sort and display models

--- a/templates/patp/base.html
+++ b/templates/patp/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'sortable-main/sortable-base.min.css' %}" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -47,5 +48,6 @@
         {% endblock %}
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'sortable-main/sortable.min.js' %}"></script>
 </body>
 </html>
